<resources>
    <string name="app_name">Trace</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

<!--    review detail-->
    <string name="room_available">방있어요</string>

    <string name="building_info">건물정보</string>
    <string name="address">주소</string>
    <string name="build_date">준공년도</string>
    <string name="score_avg">별점 평균</string>

    <string name="view_all_reviews">전체 리뷰 보기</string>

    <string name="price">가격</string>
    <string name="room_area">면적</string>
    <string name="residential_period">거주기간</string>
    <string name="insect">벌레 여부</string>
    <string name="soundproof">방음</string>
    <string name="water_pressure_freeze">수압 및 동파여부</string>
    <string name="sunlight">채광</string>
    <string name="remodeled">리모델링 여부</string>
    <string name="remodeled_yes">돼있어요👌</string>
    <string name="remodeled_no">안 돼있어요❌</string>

    <string name="comment">솔직한 한 마디</string>

    <string name="pay_and_read_more"><u>100포인트 지불하고 이어보기</u></string>

<!--    edit review 1-->
    <string name="write_review">리뷰 작성하기</string>
    <string name="cost">거주 비용</string>
    <string name="total_score">총점</string>
    <string name="flag_for_sale"><i>방 내놓기</i></string>
    <string name="fee_monthly">월세</string>
    <string name="fee_yearly">전세</string>
    <string name="deposit">보증금</string>
    <string name="unit"> (단위: 만) </string>
    <string name="unit_area"> (단위: ㎡)</string>
    <string name="water_pressure">수압</string>
    <string name="good">좋아요👍</string>
    <string name="mediocre">보통</string>
    <string name="bad">아쉬워요👎</string>
    <string name="water_freeze">동파여부</string>
    <string name="freeze_yes">동파 있어요🥶</string>
    <string name="freeze_no">동파 없어요😊</string>
    <string name="too_many">아주 많음</string>
    <string name="many">조금 많음</string>
    <string name="few">적음</string>
    <string name="very_few">거의 없음</string>
    <string name="next"><u>다음으로 → </u></string>

<!--    edit review 2-->
    <string name="options">옵션</string>
    <string name="options_hint">냉장고, 책상 등 방에 포함된 옵션을 작성해 주세요</string>
    <string name="surroundings">주변 정보</string>
    <string name="surroundings_hint">교통, 편의시설, 외부소음, 식당, 학교와의 거리 등을 입력해주세요</string>
    <string name="comment_hint">그 외 솔직한 후기를 작성해주세요</string>
    <string name="put_room_for_sale"><u>방 내놓기</u></string>
    <string name="previous"><u> ← 이전으로</u></string>
    <string name="done_and_save">완료 및 저장</string>
    <string name="contact_hint">연락 수단을 입력해주세요<br/>(휴대전화 번호, 카카오톡 id 등)</string>
</resources>