<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_marginBottom="@dimen/card_margin"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_interior_margin">
            <TextView
                android:id="@+id/tv_write_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/write_review"
                android:textSize="@dimen/section_title"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/netmarblel"/>
            <TextView
                android:id="@+id/tv_address_content"
                app:layout_constraintTop_toBottomOf="@id/tv_write_review"
                android:layout_margin="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="서울특별시 성북구 성북로 ..."
                android:fontFamily="@font/netmarblel" />
            <TextView
                android:id="@+id/tv_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_address_content"
                android:text="@string/options"
                android:fontFamily="@font/netmarblel"/>
            <EditText
                android:id="@+id/et_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_options"
                android:background="@color/colorBackground"
                android:textColor="@color/black"
                android:hint="@string/options_hint"
                android:fontFamily="@font/netmarblel"/>
            <TextView
                android:id="@+id/tv_surroundings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                app:layout_constraintTop_toBottomOf="@id/et_options"
                android:text="@string/surroundings"
                android:fontFamily="@font/netmarblel"/>
            <EditText
                android:id="@+id/et_surroundings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:background="@color/colorBackground"
                app:layout_constraintTop_toBottomOf="@id/tv_surroundings"
                android:hint="@string/surroundings_hint"
                android:textColor="@color/black"
                android:fontFamily="@font/netmarblel"/>
            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                app:layout_constraintTop_toBottomOf="@id/et_surroundings"
                android:text="@string/comment"
                android:fontFamily="@font/netmarblel"/>
            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                app:layout_constraintTop_toBottomOf="@id/tv_comment"
                android:hint="@string/comment_hint"
                android:textColor="@color/black"
                android:fontFamily="@font/netmarblel"/>

            <TextView
                android:id="@+id/tv_put_room_for_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                app:layout_constraintTop_toBottomOf="@id/et_comment"
                android:text="@string/put_room_for_sale"
                android:textColor="@color/black"
                android:fontFamily="@font/netmarblel"/>

            <EditText
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_put_room_for_sale"
                android:background="@color/colorBackground"
                android:hint="@string/contact_hint"
                android:textColor="@color/black"
                android:fontFamily="@font/netmarblel"/>

            <Button
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_contact"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/section_margin"
                android:background="@android:color/transparent"
                android:text="@string/previous"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <Button
                android:id="@+id/btn_done_and_save"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_save_height"
                app:layout_constraintTop_toTopOf="@id/btn_previous"
                app:layout_constraintBottom_toBottomOf="@id/btn_previous"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/button_rounded"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/done_and_save"
                android:fontFamily="@font/netmarblel"
                android:clickable="true"
                android:focusable="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>