<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_marginBottom="@dimen/card_margin"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_interior_margin">
            <TextView
                android:id="@+id/tv_write_review"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/text_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/section_title"
                android:text="@string/write_review"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_address_content"
                app:layout_constraintTop_toBottomOf="@id/tv_write_review"
                android:layout_margin="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="서울특별시 성북구 성북로 ..."/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_attach_image"
                app:layout_constraintTop_toBottomOf="@id/tv_address_content"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_residential_period"
                app:layout_constraintTop_toBottomOf="@id/rv_attach_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/residential_period"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_period_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_residential_period"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/text_margin"
                android:text="2000.01"/>
            <TextView
                android:id="@+id/tv_wave"
                app:layout_constraintTop_toTopOf="@id/et_period_from"
                app:layout_constraintBottom_toBottomOf="@id/et_period_from"
                app:layout_constraintStart_toEndOf="@id/et_period_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ~ "
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/et_period_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/et_period_from"
                app:layout_constraintStart_toEndOf="@id/tv_wave"
                android:text="2000.12"/>

            <TextView
                android:id="@+id/tv_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                app:layout_constraintTop_toBottomOf="@id/et_period_from"
                android:text="@string/cost"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/rg_cost"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_cost"
                android:layout_margin="@dimen/text_margin">
                <RadioButton
                    android:id="@+id/rg_monthly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fee_monthly"/>
                <RadioButton
                    android:id="@+id/rg_yearly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/fee_yearly"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_cost_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rg_cost"
                app:layout_constraintStart_toStartOf="parent"
                android:text="보증금:"/>
            <EditText
                android:id="@+id/et_cost_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_cost_1"
                app:layout_constraintBottom_toBottomOf="@id/tv_cost_1"
                app:layout_constraintStart_toEndOf="@id/tv_cost_1"
                android:hint="@string/unit"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                android:id="@+id/tv_cost_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintStart_toEndOf="@id/et_cost_1"
                app:layout_constraintTop_toTopOf="@id/tv_cost_1"
                android:text="월세:"/>
            <EditText
                android:id="@+id/et_cost_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_cost_2"
                app:layout_constraintTop_toTopOf="@id/tv_cost_1"
                app:layout_constraintBottom_toBottomOf="@id/tv_cost_1"
                android:hint="@string/unit"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                android:id="@+id/tv_total_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_cost_1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/total_score"
                android:textStyle="bold"/>
            <FrameLayout
                android:id="@+id/fl_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_total_score">
                <include
                    layout="@layout/item_stars"/>
            </FrameLayout>
            <TextView
                android:id="@+id/tv_is_remodeled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_stars"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/remodeling"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/rg_remodeling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_is_remodeled">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="O"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="X"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_water_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rg_remodeling"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/water_pressure"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/rg_water_pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_water_pressure">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/good"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/bad"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_water_freeze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rg_water_pressure"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/water_freeze"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/rg_water_freeze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_water_freeze">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/freeze_no"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/freeze_yes"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_sunlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rg_water_freeze"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/sunlight"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/rg_sunlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_sunlight">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/good"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/bad"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_soundproof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rg_sunlight"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/soundproof"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/rg_soundproof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_soundproof">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/good"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mediocre"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bad"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_insects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rg_soundproof"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/insect"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/rg_insects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_insects">
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/very_few"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/few"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/many"/>
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/too_many"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:layout_constraintTop_toBottomOf="@id/rg_insects"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:background="@android:color/transparent"
                android:text="@string/next"
                android:textStyle="bold"
                android:textColor="#000000"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>