<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_radius"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_interior_margin">

        <TextView
            android:id="@+id/tv_building_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/building_info"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_building_info_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_building_info"/>
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_building_info_detail"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/address"/>
        <TextView
            android:id="@+id/tv_build_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_address"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/build_date"/>
        <TextView
            android:id="@+id/tv_score_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_build_date"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/score_avg"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_score_avg"
            app:layout_constraintTop_toTopOf="@id/tv_score_avg"
            app:layout_constraintBottom_toBottomOf="@id/tv_score_avg">
            <include
                android:id="@+id/included_stars"
                layout="@layout/item_stars"/>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>